tests/transpiler/x/php/tail_recursion.error
run: exit status 255

Fatal error: Uncaught Error: Call to undefined function sum_rec() in /workspace/mochi/tests/transpiler/x/php/tail_recursion.php:6
Stack trace:
#0 /workspace/mochi/tests/transpiler/x/php/tail_recursion.php(8): {closure:/workspace/mochi/tests/transpiler/x/php/tail_recursion.php:2}(10, 0)
#1 {main}
  thrown in /workspace/mochi/tests/transpiler/x/php/tail_recursion.php on line 6
